Add some style to basic codes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Rock Paper Scissors</h1>
     <div class="rules">
         <h2>Games Rules</h2>
-        <p>Paper covers Rock, Rock blunts Scissors and Scissors cut Paper.</p>
-        <p>Choose one of them and see if you can beat me!</p>
+        <p>**Paper covers Rock, Rock blunts Scissors and Scissors cut Paper.**</p>
+        <p>**Choose one of them and see if you can beat me!**</p>
     </div>
     <div class="game">
         <button id="rock">Rock</button>
